<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true">

    <LinearLayout
        android:padding="10dp"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/taskDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="@string/taskName1"/>
        <TextView
            android:id="@+id/taskDetailDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/taskName1"/>
        <TextView
            android:id="@+id/taskDetailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/taskDate1"/>
        <TextView
            android:id="@+id/taskDetailWithWho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/taskPartner1"/>
        <TextView
            android:id="@+id/taskDetaillocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/taskLocation1"/>
    </LinearLayout>

</LinearLayout>