<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/dr_item"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Task Title"
        android:id="@+id/addTask_title"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:hint="Date"
            android:id="@+id/addTask_date"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Time"
            android:id="@+id/addTask_time"
            android:paddingBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_detail"
        android:id="@+id/addTask_detail"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_location"
        android:id="@+id/addTask_location"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partner"
        android:id="@+id/addTask_partner"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">
        <TextView
            android:id="@+id/update_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/nothing_change"/>
        <TextView
            android:id="@+id/cancel_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addtask_cancel"
            android:layout_toLeftOf="@id/addTask_done"
            android:layout_toStartOf="@id/addTask_done"
            android:layout_centerInParent="true"
            android:layout_marginRight="20dp"
            android:textColor="@color/teal_200"
            android:textSize="15sp"
            android:layout_marginEnd="20dp" />
        <Button
            android:id="@+id/addTask_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add_task_done"
            android:layout_alignParentEnd="true" />
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/addTask_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
